[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/inkgd/editor/ink_dock.gd" type="Script" id=1]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="Ink" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 400
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_right = 1920.0
margin_bottom = 424.0
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer"]
margin_right = 1920.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VSplitContainer/MainVBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 1877.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Configuration"

[node name="TestButton" type="Button" parent="VSplitContainer/MainVBoxContainer/HBoxContainer"]
margin_left = 1881.0
margin_right = 1920.0
margin_bottom = 20.0
text = "Test"

[node name="Panel" type="Panel" parent="VSplitContainer/MainVBoxContainer"]
margin_top = 24.0
margin_right = 1920.0
margin_bottom = 424.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/MainVBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 395.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer"]
margin_right = 1910.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 1910.0
margin_bottom = 80.0
size_flags_horizontal = 3
columns = 2

[node name="MonoLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
visible = false
margin_right = 1913.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Mono"

[node name="MonoHBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
visible = false
margin_left = 1917.0
margin_right = 3830.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="MonoLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/MonoHBoxContainer"]
margin_right = 1881.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="MonoDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/MonoHBoxContainer"]
margin_left = 1885.0
margin_right = 1913.0
margin_bottom = 24.0

[node name="ExecutableLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 953.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Executable"

[node name="ExecutableHBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 957.0
margin_right = 1910.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ExecutableLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/ExecutableHBoxContainer"]
margin_right = 921.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ExecutableDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/ExecutableHBoxContainer"]
margin_left = 925.0
margin_right = 953.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="SourceFileLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 953.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Source File"

[node name="SourceFileHBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 957.0
margin_top = 28.0
margin_right = 1910.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="SourceFileLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/SourceFileHBoxContainer"]
margin_right = 921.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://examples/ink/the_intercept.ink"

[node name="SourceFileDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/SourceFileHBoxContainer"]
margin_left = 925.0
margin_right = 953.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="TargetFileLabel" type="Label" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 953.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Target File"

[node name="TargetFileHBoxContainer3" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 957.0
margin_top = 56.0
margin_right = 1910.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="TargetFileLineEdit" type="LineEdit" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/TargetFileHBoxContainer3"]
margin_right = 921.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "res://examples/ink/the_intercept.ink.json"

[node name="TargetFileDialogButton" type="Button" parent="VSplitContainer/MainVBoxContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GridContainer/TargetFileHBoxContainer3"]
margin_left = 925.0
margin_right = 953.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="MainVBoxContainer2" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 436.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/MainVBoxContainer2"]
margin_right = 1920.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VSplitContainer/MainVBoxContainer2/HBoxContainer"]
margin_top = 3.0
margin_right = 1851.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Inklecate"

[node name="BuildButton" type="Button" parent="VSplitContainer/MainVBoxContainer2/HBoxContainer"]
margin_left = 1855.0
margin_right = 1920.0
margin_bottom = 20.0
text = "Compile"

[node name="Panel2" type="Panel" parent="VSplitContainer/MainVBoxContainer2"]
margin_top = 24.0
margin_right = 1920.0
margin_bottom = 644.0
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VSplitContainer/MainVBoxContainer2/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer/MainVBoxContainer2/Panel2/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 615.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="BuildOutputLabel" type="Label" parent="VSplitContainer/MainVBoxContainer2/Panel2/MarginContainer2/ScrollContainer"]
margin_right = 1910.0
margin_bottom = 14.0
size_flags_horizontal = 3
autowrap = true
